# wgpu-bridge

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: anvil_integration.rs  basic_bridge.rs
src/: bridge.rs  error.rs  lib.rs  modifiers.rs  multiplanar.rs  pipeline.rs  renderer.rs  scanout.rs  smithay_sync.rs  sync.rs  texture.rs
src/shaders/: compositor.wgsl
tests/: dmabuf_import.rs  integration.rs  render_pipeline.rs  sync.rs  sync_scanout.rs
