[package]
name = "lamco-wgpu"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "wgpu integration for Smithay-based Wayland compositors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lamco-admin/lamco-wgpu"
homepage = "https://lamco.ai"
documentation = "https://docs.rs/lamco-wgpu"
readme = "README.md"
authors = ["Greg Lamberson <greg@lamco.io>"]
keywords = ["wgpu", "smithay", "wayland", "compositor", "vulkan"]
categories = ["graphics", "rendering::graphics-api"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
smithay = { git = "ssh://git@git.andrew.cx/external/smithay.git", rev = "94687f51cb7a4c57559f5f5f72aa1c68a60ea940", default-features = false, features = [
    "renderer_gl",
    "backend_drm",
    "backend_gbm",
    "backend_vulkan",
    "wayland_frontend",
] }

wgpu = "28"
wgpu-hal = { version = "28", features = ["vulkan"] }
wgpu-types = "28"
wgpu-core = "28"

ash = "0.38"
thiserror = "2"
tracing = "0.1"
weak-table = "0.3"
drm-fourcc = "2"
wayland-server = "0.31"
pollster = "0.4"
libc = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["dmabuf", "explicit-sync"]
dmabuf = []
explicit-sync = []

[lints.rust]
unused_unsafe = "warn"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
missing_safety_doc = "warn"
unwrap_used = "warn"
similar_names = "warn"
wildcard_imports = "warn"
